grammar.ebnf
program         = decl* ;

decl            = func_decl ;

func_decl       = "func" ident "(" ")" ( "void" | "i32" ) stmt;

stmt            = block
                | expr ";" ;

block           = "{" stmt + "}" ;

expr            = func_call
                | number ;

func_call       = ident "(" expr ")" ;

number          = ... ;

ident           = ... ;
